Changed mail text

--- a/app/views/mailbot/worksheet_graded.html.haml
+++ b/app/views/mailbot/worksheet_graded.html.haml
@@ -7,28 +7,36 @@
 %p
   You can now login into your account - using the e-mail and password you provided - 
   to view our feedback on your work
+%h3= "The Grading Process"
 %p
-  The most important takeaway for you should be the feedback that we give - in the 
-  form of comments and a colour code
+  You might have questions on how we grade and what we look for in the work you do.
+  So, let us tell you now
 %p
-  The colour code - which could be <b>red, orange or green</b> - is our estimate 
-  of whether the question has been attempted honestly or not
-%p
+  When we grade your assignments, we ask ourselves the following questions
   %ul
     %li
-      <b>Green</b> means that we are fairly certain that the work done is your own.
-      An unattempted question gets a green because its been honestly left unattempted
+      <b>Is the work done the student's own?</b>When something has been plagiarised, it shows. 
+      We like to see you making your own mistakes - not someone else's
     %li
-      <b>Orange</b> means that we suspect plagiarism - but cannot say for sure. You still 
-      get full credit for the question - but have left some doubt in our mind
+      <b>Is the work mathematically sound?</b> Which means, has the student identified the key 
+      to solving the problem and followed it up with mathematical work 
     %li
-      <b>Red</b> means we are fairly certain that the work has been plagiarized. A red 
-      results in an automatic zero for that question
+      <b>Does the solution make for a cogent story?</b> In other words, if one were 
+      to read the solution from start to finish, could one easily see what you (the student) 
+      were thinking
 %p
-  <b>#{@student.first_name}</b>, please know that we intentionally do <b>not</b> show 
-  you your score - just as we do not show your friends their scores 
+  Other than these, we do not care for much else - least of all the final answer. 
+  If you understand the underlying Math, you will eventually get to the answer
+
+%h3="Where can I see my scores?"
 %p
-  Our aim is not to rank order you - but to help you relax about Maths and use our feedback 
+  You can't - because we do not show them to you. Your teacher, however, can. And if you really 
+  must know, you can always ask him/her. That said, we do hope you will resist the urge
+%p
+  And here is why. Our aim is not to rank order you. Nor should you rank order yourself - which 
+  you would be able to do if you knew your scores and those of your friends
+%p  
+  Rather, our aim is to help you relax about Maths (its possible) and to use our feedback 
   to improve. As we like to say at Gradians.com - <b>Grades will happen</b>. And they will.
   Take it from people who were once in school just like you 
 %p
