Block sign-in if unsupported browser (ie. too old)

--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -3860,6 +3860,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
     }
     > li {
       float: left;
+      &.pull-right { float: right ; }
       > a {
         float: none;
         margin: {
