--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
               %a.brand.span4{ :href => "#"}
                 = image_tag "logo-mit-beta-2.png"
               %ul.nav.span7
-                %li.pull-right.offset2
+                %li.pull-right
                   #signin-form
                     %form.form-inline{ :action => session_path(:account), :method => :post }
                       %input.input-medium{ :type => :text, :name => "account[login]", :placeholder => "Email"}
