Renamed Testpaper -> Exam
An Exam is nothing more than a collection of worksheets. Its only
created if the teacher does NOT publish a quiz. Otherwise, only individual
worksheets are created for students

--- a/app/views/mailbot/grading_done.html.haml
+++ b/app/views/mailbot/grading_done.html.haml
@@ -1,7 +1,7 @@
 
 %p
-  This is to let you know that testpaper <b>#{@testpaper.name}</b> for quiz <b>#{@quiz.name}</b>
-  has been graded. The mean score - over the <b>#{@testpaper.student_ids.count}</b> student(s) - 
+  This is to let you know that assignment <b>#{@exam.name}</b> for quiz <b>#{@quiz.name}</b>
+  has been graded. The mean score - over the <b>#{@exam.student_ids.count}</b> student(s) - 
   is <b>#{@mean} out of #{@max}</b>. You can view individual results for students by logging-in into your account
 %p
   <b>Gradians Support Team</b>
