--- a/app/views/mailbot/welcome_email.html.haml
+++ b/app/views/mailbot/welcome_email.html.haml
@@ -25,11 +25,11 @@
       try this step out with just one student (see next point) before trying it 
       out with multiple students
     %li
-      Download and then printout the testpaper PDF. Pretend to be your own student
+      Download and then printout the exam PDF. Pretend to be your own student
       and write responses as a student would. To make the whole exercise a little 
       more realistic, <b>make some intentional mistakes</b>
     %li
-      Scan the testpaper and send it to us using our downloadable scanning utility.
+      Scan the exam and send it to us using our downloadable scanning utility.
       We will grade the papers and the reports would become available in your account
 %p
   There is <b>no limit</b> on how many times you can repeat the above cycle. 
