Changed image to show printer for option to print composite exam

--- a/app/views/modals/teacher/_ws-options-v2.html.haml
+++ b/app/views/modals/teacher/_ws-options-v2.html.haml
@@ -7,7 +7,7 @@
       
   .row-fluid.ws-option{ id: 'as-classwork' }
     .span2.offset1
-      = image_tag "notifications/classroom.png"
+      = image_tag 'quick-trial/printer.png'
     .span7
       %h2= "I will"
       %p
