Humungous changes - too many to list individually ...
But basically, there is now a new mint/ structure and a new QR code
scheme

--- a/app/views/teachers/_form-qzb.html.haml
+++ b/app/views/teachers/_form-qzb.html.haml
@@ -1,5 +1,5 @@
 
-- action = context == :editqz ? "#{quiz_edit_path}?id=:id&op=add" : teacher_build_quiz_path
+- action = context == :editqz ? "#{quiz_edit_path}?id=:id&op=add" : quiz_build_path
 - data_id = context == :editqz ? "tab-wsb-quizzes" : nil
 - btn_text = context == :editqz ? "Add Selected" : "Build Quiz"
 
