--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -1,28 +1,24 @@
 
 - my_sektions = teacher.sektions 
-- my_sektions = my_sektions.blank? ? Sektion.where(:id => 58) : my_sektions
+- my_sektions = my_sektions.blank? ? Sektion.where(id: 58) : my_sektions
 
 -# Left-side tabs - one per section
 #sektions-tab.tabbable.tabs-left
-  %ul.nav.nav-tabs.span3{ :id => 'wsb-ul-milestone-2' }
-    - my_sektions.each do |m|
+  %ul.nav.nav-tabs.span3{ id: 'wsb-ul-milestone-2' }
+    - my_sektions.each_with_index do |m,j|
       %li
-        = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
-        :href => "#wsb-sektions", :url => { :self => "sektion/students.json?id=#{m.id}&context=wsb&quiz=:prev" },
-        :prev => 'tab-wsb-quizzes'
+        = simple_link for: "#{m.label}", toggle: :tab, marker: "#{m.id}", href: "#wsb-sektions", 
+        url: { self: "sektion/students.json?id=#{m.id}&context=wsb&quiz=:prev" }, prev: 'tab-wsb-quizzes'
 
   -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
   .tab-content.span8{ :id => 'wsb-div-milestone-3' }
-    = simple_form_for :checked, :remote => true, :defaults => { :label => false, :required => false }, 
-    :html => { :id => 'form-wsb-3', :class => 'multi-select', 
-    :data => { :action => "#{quiz_assign_path}?id=:id", :id => 'tab-wsb-quizzes'} } do |f|
+    = simple_form_for :checked, remote: true, defaults: { label: false, required: false }, html: { id: 'form-wsb-3', 
+    class: 'multi-select', data: { action: "#{quiz_mass_assign_path}?id=:id", id: 'tab-wsb-quizzes' } } do |f|
       .btn-toolbar.purge-skip
         .btn-group
-          = simple_button :icon => 'icon-list', :id => 'select-all-for-quiz',
-            :tooltip => "Select All", :placement => :right
+          = simple_button icon: 'icon-list', id: 'select-all-for-quiz', tooltip: 'Select All', placement: :right
         .btn-group
-          = simple_link :for => "Make PDF", :icon => 'icon-cog', :id => 'lnk-build-ws', :class => 'btn btn-inverse'
-
+          = simple_link for: 'Make PDF', icon: 'icon-cog', id: 'lnk-build-ws', class: 'btn btn-inverse'
         .hide.ws-option
           = f.input :ws_type, input_html: { name: :ws_type }
           = f.input :deadline, input_html: { name: :deadline } 
