Undefined variable error fixed

--- a/app/views/mailbot/new_grading_work.html.haml
+++ b/app/views/mailbot/new_grading_work.html.haml
@@ -1,3 +1,15 @@
 
 %p
   Go get'em Tiger
+%p
+  %ul
+    %li
+      Try and identify the root-cause issue in an imperfect solution. This is the 
+      first place where the solution started going wrong
+    %li
+      Aim to give feedback that makes students think about gaps in their solution - 
+      and not worry about what they scored
+    %li
+      Which means, rather than spoon feed an answer, prefer instead to pose questions at the root-cause
+
+
