Send mails to designated examiner and sending teacher when a new suggestion comes in
Report deadlines in GMT to external parties and in IST to internal ones

--- a/app/views/mailbot/scans_received.html.haml
+++ b/app/views/mailbot/scans_received.html.haml
@@ -2,10 +2,10 @@
 %p
   Dear #{@teacher.first_name},
 %p
-  We have received the new scans you sent today for grading
+  We have received some new scans today from you for grading 
 %p
-  The scans have been distributed amongst designated graders. And the results 
-  of for the quiz would be ready and available in <b>3 business days</b> - that is -
-  by <b>#{@deadline.strftime("%I:%M%p")}</b> on <b>#{@deadline.strftime("%A, %b %d")}</b>
+  They have been distributed amongst designated graders. The results 
+  would be ready and available in <b>3 business days</b> - that is -
+  by <b>#{@deadline.strftime("%I:%M%p")} GMT</b> on <b>#{@deadline.strftime("%A, %b %d")}</b>
 %p
   <b>Gradians Support Team</b>
