--- a/app/views/mailbot/new_suggestion.html.haml
+++ b/app/views/mailbot/new_suggestion.html.haml
@@ -5,4 +5,4 @@
   %li
     \# pages: #{@sg.pages}
   %li
-    Location: "locker/#{@sg.teacher_id}/#{@sg.signature}"
+    Location: "locker/0-#{@sg.teacher_id}/#{@sg.signature}"
