--- a/app/views/mailbot/suggestion_received.html.haml
+++ b/app/views/mailbot/suggestion_received.html.haml
@@ -4,19 +4,24 @@
 %p
   We have received the questions you sent today for inclusion into the database.
   And we expect to have them added by #{@deadline.strftime('%I:%M%p GMT')} on 
-  #{@deadline.strftime('%A, %b %d')}
+  #{@deadline.strftime('%A, %b %d')}.
 %p
   Please know that we take great care before adding a question into our database. 
   For example, we create <b>multiple versions</b> for every question you send. And as far 
   as possible, <b>we try to ensure</b> that each new question brings with it <b>new insights</b>
-  for the student
+  for the student.
 %p
-  Our aim is to keep the noise as low in our question bank. And therefore, if we feel that 
-  some of the questions you sent today are similar to the ones we already have <b>or</b> if 
-  we feel they do not offer any new insights, then we would decide against typesetting them. 
+  Our aim is to keep the noise as low as possible in our question bank. And therefore, if we feel that 
+  some of the questions you sent today are 
+  %ul
+    %li
+      Similar to the ones we already have <b>or that</b>
+    %li
+      They do not offer any new insights
+  then we may decide against typesetting them. 
 %p
   We just thought you should know how we work lest you fail to find the exact questions 
-  you sent when you next check
+  you sent the next time you check. 
 %p
   Best regards, 
   <b>Gradians Support Team</b>
