[Big]: Changed the way sektions are created ...
We now ask for the sektion name, its expected lifetime and whether or
not it should be auto-renewed.

Once this initial information is given, the system can take care of
the rest. For example, the system can create a new sektion once the old
one expires

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -11,6 +11,7 @@
     = render partial: 'menus/teacher/per-ws'
     = render partial: 'menus/teacher/per-question'
     = render partial: 'menus/teacher/per-asset'
+    = render partial: 'menus/teacher/per-sk'
     = render partial: 'menus/teacher/qz-main', locals: { teacher: tc, server: server }
     = render partial: 'menus/teacher/sektions'
     = render partial: 'menus/teacher/rc' 
