--- a/app/views/modals/teacher/_new-sk-two.html.haml
+++ b/app/views/modals/teacher/_new-sk-two.html.haml
@@ -14,20 +14,20 @@
         %p
           Click <b>Preview</b> to see what names were inferred
         %p.push-down
-          = simple_form_for :add, :url => preview_names_path, :remote => true, :defaults => { :label => false } do |f|
-            = f.input :names, :as => :text, :input_html => { :rows => 10, :cols => 60, :class => 'span11' }
-            = simple_button :for => 'Preview', :type => :submit, :class => 'btn-primary'
+          = simple_form_for :add, url: preview_names_path, remote: true, defaults: { label: false } do |f|
+            = f.input :names, as: :text, input_html: { rows: 10, cols: 60, class: 'span11' }
+            = simple_button for: 'Preview', type: :submit, class: 'btn-primary'
 
     -# print
     .span7
       .span11
         %h1.orange= "Check"
         %p
-          If the list of students below looks good, then click <b>Add to Group</b> 
-        %p
-          = simple_form_for :add, :remote => true, :defaults => { :label => false }, 
-            :html => { :data => { :id => 'new-sk-students', :action => "#{enroll_named_path}?id=:id" } } do |f|
-            = simple_button :for => "Add to Group", :type => :submit, :class => 'btn-primary btn-large'
+          = simple_form_for :add, remote: true, defaults: { label: false }, 
+            html: { data: { id: 'tab-mng-sektions-1', action: "#{enroll_named_path}?id=:id" } } do |f|
+            %p
+              If the list of students below looks good, then click 
+              = simple_button for: 'Add to Group', type: :submit, class: 'btn-primary' 
             #new-sk-students.push-down
               .column.span4
               .column.span4
