--- a/app/views/mailbot/new_sektion.html.haml
+++ b/app/views/mailbot/new_sektion.html.haml
@@ -6,7 +6,8 @@
 %p
   %ul
     %li= "Name: #{@name}"
-    %li= "<b>Code: #{@code}</b>"
+    %li
+      <b>Code: #{@code}</b>
     %li= "Valid From: #{@start}"
     %li= "Valid Till: #{@end}"
     %li= "Renews Automatically: #{@renew}"
