Changed :partial => to partial:

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -5,22 +5,23 @@
 
 - content_for :toolbox do 
   #toolbox.hidden 
-    = render :partial => 'toolbox/line'
-    = render :partial => 'toolbox/fdb-panel'
-    = render :partial => 'menus/user/account'
-    = render :partial => 'menus/student/inbox'
+    = render partial: 'toolbox/line'
+    = render partial: 'toolbox/fdb-panel'
+    = render partial: 'menus/user/account'
+    = render partial: 'menus/student/inbox'
     = render partial: 'shared/user/preview'
 
 - content_for :modals do
   #modals
-    = render :partial => 'modals/user/account'
-    = render :partial => 'modals/user/upload-scans'
-    = render :partial => 'modals/student/enroll'
-    = render :partial => 'modals/student/enrollment-confirm'
+    = render partial: 'modals/user/account'
+    = render partial: 'modals/user/upload-scans'
+    = render partial: 'modals/student/enroll'
+    = render partial: 'modals/student/enrollment-confirm'
+    = render partial: 'modals/user/ask-a-question'
   #notifications
-    = render :partial => 'notifications/student/enrollment-blocked'
-    = render :partial => 'notifications/student/enrolled-already'
-    = render :partial => 'notifications/student/sektion-not-found'
+    = render partial: 'notifications/student/enrollment-blocked'
+    = render partial: 'notifications/student/enrolled-already'
+    = render partial: 'notifications/student/sektion-not-found'
 
 !!!5
 
@@ -71,18 +72,18 @@
                   = simple_link :for => "Hello, #{student.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
-          = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
+          = render partial: 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
           #left-1
-            = render :partial => 'students/rc'
+            = render partial: 'students/rc'
           #left-2
-            = render :partial => 'students/inbox'
+            = render partial: 'students/inbox'
         #middle.g-panel.span4
-          = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
+          = render partial: 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-1
         #wide.g-panel.span8
           #wide-X
           #wide-wait
-            = render :partial => 'toolbox/wait'
+            = render partial: 'toolbox/wait'
 
     = yield :toolbox
     = yield :modals
