--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -8,7 +8,10 @@
   #toolbox.hidden 
     = render partial: 'toolbox/line'
     = render partial: 'menus/user/account'
-    = render partial: 'menus/examiner/workbench', locals: { is_admin: is_admin } 
+    - if is_admin
+      = render partial: 'menus/examiner/workbench', locals: { is_admin: true } 
+      = render partial: 'menus/admin/customer', locals: { is_admin: true } 
+      = render partial: 'menus/admin/per-customer', locals: { is_admin: true } 
     = render partial: 'menus/user/notifications'
     = render partial: 'examiners/annotation-marks'
     = render partial: 'menus/examiner/blockdb'
@@ -23,6 +26,7 @@
     = render partial: 'modals/examiner/edit'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/upload-video-solution'
+    = render partial: 'modals/admin/create'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     - if is_admin
@@ -52,6 +56,8 @@
                 - if is_admin
                   %li.dropdown
                     = simple_link :for => 'System Monitor', id: 'lnk-admin-console'
+                  %li.dropdown
+                    = simple_link :for => "Customer", as: :dropdown, id: 'm-admin-cust'
                 %li.dropdown
                   = simple_link :for => "Workbench", as: :dropdown, id: 'm-admin-wb'
                 %li#cp-account-link.dropdown
@@ -79,6 +85,9 @@
             = render partial: 'examiners/audit'
           #left-8
             = render partial: 'examiners/video-pending'
+          - if is_admin
+            #left-9
+              = render partial: 'admin/mng-customers'
 
         - if is_admin
           #middle.g-panel.span4
@@ -93,6 +102,8 @@
             #wide-1
             #wide-2
               = render partial: 'admin/accounts-in-country'
+            #wide-3
+              = render partial: 'admin/customer-overview'
           #wide-X
             = render partial: 'shared/grading/controls'
           #wide-wait
