--- a/app/views/menus/teacher/_qz-main.html.haml
+++ b/app/views/menus/teacher/_qz-main.html.haml
@@ -3,6 +3,9 @@
 
 %ul#teacher-quiz.dropdown-menu.pull-right{ :role => :menu }
   %li
-    = simple_link :for => "New", :id => "lnk-new-quiz", :icon => 'icon-plus-sign'
+    = simple_link for: 'New', id: 'lnk-new-quiz', icon: 'icon-plus-sign'
   %li
-    = simple_link :for => "List", :id => 'lnk-existing-quiz', :icon => 'icon-list'
+    = simple_link for: 'List', id: 'lnk-existing-quiz', icon: 'icon-list'
+  -# unless current_account.loggable.online
+    %li
+      = simple_link for: 'Quick Trial', id: 'lnk-demo'
