[Sandbox]: Temp commit
Too much code to be left uncommitted

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1339,7 +1339,7 @@ li.split {
   } 
 }
 
-#m-audit-form { 
+#m-audit-form, #m-audit-apprentice { 
   label.checkbox { 
     font-size: 11px ;
   } 
