--- a/app/views/menus/examiner/_workbench.html.haml
+++ b/app/views/menus/examiner/_workbench.html.haml
@@ -20,6 +20,8 @@
   %li
     = simple_link for: "Block DB Slots", id: 'lnk-wb-blockdb', icon: 'icon-lock'
   %li
+    = simple_link for: 'My Apprentices', id: 'lnk-wb-apprentices', icon: 'icon-user'
+  %li
     = simple_link for: "Receive Scans", id: 'lnk-wb-receive', icon: 'icon-download'
 
   - if is_admin
