--- a/app/views/shared/grading/_pending.html.haml
+++ b/app/views/shared/grading/_pending.html.haml
@@ -1,7 +1,10 @@
 
+- sandboxed = !current_account.live?
+
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => 'Exams', :id => 'tab-grd-exams', :href => "#pane-grd-exams"
+    = simple_link for: (sandboxed ? 'Sandbox' : 'Exams'), id: 'tab-grd-exams', href: "#pane-grd-exams", 
+    class: (sandboxed ? 'nopurge-ever' : nil)
   %li
     = simple_link for: "Questions", id: 'tab-grd-questions', href: '#pane-grd-questions'
   %li
