--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -26,7 +26,7 @@
     = render partial: 'modals/examiner/edit'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/upload-video-solution'
-    = render partial: 'modals/admin/create'
+    = render partial: 'modals/admin/create-customer'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     - if is_admin
