--- a/app/views/layouts/guardians.html.haml
+++ b/app/views/layouts/guardians.html.haml
@@ -1,26 +1,26 @@
 
 -# Customized markers 
-- student = current_account.loggable
+- guardian = current_account.loggable
 - srvr = "#{Gutenberg['server']}"
 
 - content_for :toolbox do 
   #toolbox.hidden 
     = render partial: 'toolbox/line'
     = render partial: 'toolbox/fdb-panel'
+    = render partial: 'menus/guardian/options'
     = render partial: 'menus/user/account'
-    = render partial: 'menus/student/inbox'
+    = render partial: 'menus/teacher/rc'
     = render partial: 'shared/user/preview'
 
 - content_for :modals do
   #modals
     = render partial: 'modals/user/account'
     = render partial: 'modals/user/purchase'
-    = render partial: 'modals/user/upload-scans'
     = render partial: 'modals/student/enroll'
     = render partial: 'modals/student/enrollment-confirm'
     = render partial: 'modals/user/ask-a-question'
   #notifications
-    = render partial: 'notifications/student/enrollment-blocked'
+    = render partial: 'notifications/guardian/purchase-completed'
     = render partial: 'notifications/student/enrolled-already'
     = render partial: 'notifications/student/sektion-not-found'
 
@@ -28,7 +28,7 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "application", "students"
+    = javascript_include_tag "application", "guardians", "welcome"
     %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     %script{ :type => "text/x-mathjax-config" } 
       MathJax.Hub.Config({
@@ -54,7 +54,7 @@
     #spinner.spinner
       = image_tag "loading.gif", :id => 'img-spinner'
     .container-fluid 
-      #control-panel.g-panel.row-fluid{ :marker => "#{student.id}" } 
+      #control-panel.g-panel.row-fluid{ :marker => "#{guardian.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
@@ -62,31 +62,23 @@
                 = image_tag "logo-mit-beta-2.png"
               %ul.nav.span8.pull-right
                 %li
-                  = simple_link :for => "Buy Grade-its", :id => 'lnk-buy-credits'
-                %li
-                  = simple_link :for => "Report Cards", :id => 'lnk-st-rc'
-                %li
-                  = simple_link :for => "Inbox", :id => 'lnk-st-inbox'
+                  = simple_link :for => "Purchase", :id => 'lnk-buy-credits'
                 %li.dropdown
-                  = simple_link :for => "Upload", :id => 'lnk-upload'
-                %li.dropdown
-                  = simple_link :for => "Enroll", :id => 'lnk-enroll-self'
+                  = simple_link :for => "Options", as: :dropdown, :id => 'm-guardian-options'
                 %li#cp-account-link.dropdown
-                  = simple_link :for => "Hello, #{student.first_name}", :as => :dropdown, :id => 'm-account'
+                  = simple_link :for => "Hello, #{guardian.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
           = render partial: 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
           #left-1
-            = render partial: 'students/rc'
-          #left-2
-            = render partial: 'students/inbox'
-        #middle.g-panel.span4
+            = render partial: 'teachers/rc'
+        -#middle.g-panel.span4
           = render partial: 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-1
         #wide.g-panel.span8
           #wide-X
           #wide-wait
-            = render partial: 'welcome/balance'
+            = render partial: 'guardians/balance', locals: { guardian: guardian }
 
     = yield :toolbox
     = yield :modals
