--- a/app/views/modals/examiner/_audit-apprentice.html.haml
+++ b/app/views/modals/examiner/_audit-apprentice.html.haml
@@ -4,17 +4,20 @@
     .span2
       = image_tag 'notifications/microscope.png', :class => 'big-icon'
     .span9
-      = simple_form_for :audit, remote: true, defaults: { label: false, required: false } do |f|
+      = simple_form_for :audit, remote: true, defaults: { label: false, required: false }, 
+      html: { data: { prev: 'tab-apprentices', action: "#{close_apprentice_audit_path}?id=:prev" } } do |f|
         .row-fluid
           .span6
             %p.heading= "Gating Issues"
-            = f.input :gating, as: :check_boxes, 
-              collection: ['Used less than polite language']
+            = f.input :gating, as: :check_boxes, wrapper_html: { id: 'apprentice-gating' },
+              collection: ['Tone generally a bit harsh',
+              'Feedback too generic; Lacks precision',
+              'Incorrect diagnosis in more than one case']
           .span6
             %p.heading= "Non-gating Issues"
-            = f.input :non_gating, as: :check_boxes, 
-              collection: []
+            = f.input :non_gating, as: :check_boxes, wrapper_html: { id: 'apprentice-non-gating' }, 
+              collection: [ 'Write more Math in response to Math',
+              'Feedback a tad terse. Say a bit more']
         .row-fluid
           = f.input :comments, as: :text, input_html: { rows: 5, cols: 60, class: 'span11' }, labels: false
-          %button.btn.btn-primary.btn-large.pull-left{ type: :submit }= "Submit"
-          %button.btn.btn-inverse.btn-large.pull-right{ type: :submit, id: 'btn-audit-allok' }= "All Good"
+          %button.btn.btn-primary.btn-large.pull-right{ type: :submit }= "Can go Live"
